<resources>
    <string name="app_name">Cinepolis</string>
    <string name="idCineName">CineMax</string>
    <string name="idLogin">Iniciar sesión</string>
    <string name="idEstrenos">Proximos estrenos</string>

    <string name="idUser">Usuario: </string>
    <string name="idUserN">Ingrese su nombre de usuario.</string>
    <string name="idPassword">Clave: </string>
    <string name="idPasswordIn">Ingrese su clave.</string>


    <string name="idSalir">Salir</string>
    <string name="idBtOrdenar">Ordenar por nombre</string>
    <string name="idPeliculas">Películas:</string>
    <string name="idFuncion">Elija la función</string>
    <string name="idFecha">Fecha:</string>
    <string name="idHorarios">Horarios:</string>
    <string name="idEntradas">Entradas:</string>
    <string name="btnContinuar">Continuar</string>
    <string name="btnCancelar">Cancelar</string>

    <string name="idDetalleFuncion">Detalles de Función</string>
    <string name="idDetallesPago">Detalles de Pago</string>
    <string name="idNamefive">Nombre del propietario:</string>
    <string name="idNumber">Numero de tarjeta:</string>
    <string name="idCodigoCVV">CVV:</string>
    <string name="idVisa">Visa</string>
    <string name="idMaster">Mastercard</string>
    <string name="idTerminos">Acepto los términos y condiciones.</string>
    <string name="btnPagar">Pagar</string>
    <string name="btnCancelartwo">Cancelar</string>


</resources>