<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarSesionActivity">

    <LinearLayout
        android:id="@+id/idCont"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/off_white"
        android:padding="25dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/idButacas"
            android:layout_width="wrap_content"
            android:layout_height="119dp"
            android:layout_margin="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/butacas" />

        <TextView
            android:id="@+id/idUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idUser"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/idUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/idUserN"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/idClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idPassword"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/idUserClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/idPasswordIn"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/idLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:backgroundTint="@color/medium_blue"
            android:text="@string/idLogin" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>