<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformacionPeliculaActivity">



    <LinearLayout
        android:id="@+id/FuncionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">

        <ImageView
            android:id="@+id/cinepolis"
            android:layout_width="wrap_content"
            android:layout_height="162dp"
            app:srcCompat="@drawable/butacas" />

        <TextView
            android:id="@+id/ifFuncion"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:text="@string/idFuncion"
            android:textAlignment="center"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/imagenLayout"
            android:layout_width="match_parent"
            android:layout_height="178dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageMovie"
                android:layout_width="147dp"
                android:layout_height="178dp"
                android:scaleType="fitCenter" />

            <LinearLayout
                android:id="@+id/imagenLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleMovie"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/durationMovie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/idFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idFecha"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextFecha"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Ingrese la fecha."
            android:inputType="text" />

        <TextView
            android:id="@+id/idEntradas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idHorarios"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spHorarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/idEntradas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idEntradas"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEntradas"
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Ingrese el número de entradas."
            android:inputType="number" />

        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/medium_blue"
            android:text="@string/btnContinuar" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/medium_blue"
            android:text="@string/btnCancelar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>