<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TvFuncion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProximoEstrenoActivity">

    <LinearLayout
        android:id="@+id/idContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/off_white"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-71dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_margin="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/butacas" />

        <TextView
            android:id="@+id/idProxEstreno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/idEstrenos"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold" />


        <ScrollView
            android:id="@+id/idScrollView"
            android:layout_width="wrap_content"
            android:layout_height="252dp">

            <TableLayout
                android:id="@+id/idTableEstreno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:stretchColumns="1">

                <!-- Encabezado de la tabla -->
                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/medium_blue"
                        android:padding="8dp"
                        android:text="Título"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/medium_blue"
                        android:padding="8dp"
                        android:text="Fecha"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </TableRow>

                <!-- Aquí se agregarán las filas de datos dinámicamente -->
            </TableLayout>
        </ScrollView>

        <Button
            android:id="@+id/idBtOrdenar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:backgroundTint="@color/medium_blue"
            android:text="@string/idBtOrdenar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"  />

        <Button
            android:id="@+id/idBtSalir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:backgroundTint="@color/medium_blue"
            android:text="@string/idSalir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>